Bug 451124 - Fix vertical alignment of context menu submenus. r=Neil.
UltraBlame original commit: 061c59896168ae2210327a29790ddfba33bdd6d9

--- a/toolkit/themes/pinstripe/global/popup.css
+++ b/toolkit/themes/pinstripe/global/popup.css
@@ -38,6 +38,25 @@ appearance
 menupopup
 ;
 }
+menupopup
+>
+menu
+>
+menupopup
+popup
+>
+menu
+>
+menupopup
+{
+margin
+-
+top
+:
+-
+4px
+;
+}
 .
 popup
 -
